Specify a docker image in gitlab-ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,5 +3,9 @@ stages:
 
 deploy to prod kubernetes:
   stage: deploy
+  image: docker:1.11
+  services:
+    - docker:dind
   script:
+    - docker version
     - make deploy-gke
