--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,5 +7,6 @@ deploy to prod kubernetes:
   services:
     - docker:dind
   script:
+    - sudo apt-get install make python3 python3-jinja2
     - docker version
     - make deploy-gke
