--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -7,11 +7,11 @@ load("@jinjaize_deps//:requirements.bzl", "requirement")
 load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
 
 py_binary(
-    name="jinjaize",
-    python_version="PY3",
-    srcs_version="PY3",
-    srcs=["jinjaize.py",],
-    deps=[
+    name = "jinjaize",
+    srcs = ["jinjaize.py"],
+    python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
         requirement("csscompressor"),
         requirement("htmlmin"),
         requirement("jinja2"),
@@ -23,6 +23,7 @@ all_jinja_templates = [
     "index.html.jinja",
     "articles/rl-force-tube/index.html.jinja",
     "articles/2019-07-21-program-trace-analysis-with-wireshark/index.html.jinja",
+    "articles/2020-02-22-word-squares/index.html.jinja",
     "about/index.html.jinja",
     "ballistae/index.html.jinja",
     "frustum/index.html.jinja",
@@ -31,19 +32,23 @@ all_jinja_templates = [
     "webgl-raytracer/index.html.jinja",
 ]
 
-all_jinja_template_outputs = [tpl.rsplit('.jinja')[0] for tpl in all_jinja_templates]
+all_jinja_template_outputs = [tpl.rsplit(".jinja")[0] for tpl in all_jinja_templates]
 
 [genrule(
-    name="generate-{}".format(o),
-    srcs=[i],
-    tools=["//:jinjaize", "//:base.html.jinja", "//:row-major-logo-optimized.svg"],
-    outs=[o],
-    cmd="PYTHONIOENCODING=utf8 $(location //:jinjaize) --template-path='./' <$< >$@ || exit 1",
-) for i,o in zip(all_jinja_templates, all_jinja_template_outputs)]
+    name = "generate-{}".format(o),
+    srcs = [i],
+    outs = [o],
+    cmd = "PYTHONIOENCODING=utf8 $(location //:jinjaize) --template-path='./' <$< >$@ || exit 1",
+    tools = [
+        "//:base.html.jinja",
+        "//:jinjaize",
+        "//:row-major-logo-optimized.svg",
+    ],
+) for i, o in zip(all_jinja_templates, all_jinja_template_outputs)]
 
 filegroup(
-    name="jinja_template_results",
-    srcs=all_jinja_template_outputs
+    name = "jinja_template_results",
+    srcs = all_jinja_template_outputs,
 )
 
 all_static_incompressible = [
@@ -140,177 +145,186 @@ all_static_incompressible = [
 ]
 
 all_static_compressible = [
-  "articles/rl-force-tube/Chart.js",
-  "articles/rl-force-tube/rl-force-tube.js",
-  "articles/2019-07-21-program-trace-analysis-with-wireshark/packet_dump.pcap",
-  "articles/2019-07-21-program-trace-analysis-with-wireshark/example-protocol-dissector.lua",
-  "articles/2019-07-21-program-trace-analysis-with-wireshark/unmodified-example-program.cc",
-  "articles/2019-07-21-program-trace-analysis-with-wireshark/modified-example-program.cc",
-  "masters-thesis-presentation/reveal.js",
-  "masters-thesis-presentation/reveal.css",
-  "masters-thesis-presentation/white.css",
-  "masters-thesis-presentation/katex/katex.css",
-  "masters-thesis-presentation/katex/katex.js",
-  "masters-thesis-presentation/katex/contrib/auto-render.min.js",
-  "masters-thesis-presentation/phase-space-intro.svg",
-  "masters-thesis-presentation/phase-space-classical-steering.svg",
-  "masters-thesis-presentation/phase-space-deactivation-steering.svg",
-  "masters-thesis-presentation/find-maximal-interval.svg",
-  "masters-thesis-presentation/deactivation-pattern-width5pct.svg",
-  "masters-thesis-presentation/deactivation-pattern-width10pct.svg",
-  "masters-thesis-presentation/deactivation-pattern-width25pct.svg",
-  "masters-thesis-presentation/deactivation-pattern-width41pct.svg",
-  "masters-thesis-presentation/deactivation-pattern-width50pct.svg",
-  "masters-thesis-presentation/deactivation-pattern-width75pct.svg",
-  "masters-thesis-presentation/deactivation-pattern-width100pct.svg",
-  "masters-thesis-presentation/main-beam-comparison.svg",
-  "masters-thesis-presentation/deactivation-main-beam-vs-w.svg",
-  "masters-thesis-presentation/classical-pattern.svg",
-  "masters-thesis-presentation/captured-elements.svg",
-  "masters-thesis-presentation/phase-space-pigeonhole.svg",
-  "masters-thesis-presentation/example-array.svg",
-  "masters-thesis-presentation/experiment-architecture.svg",
-  "masters-thesis-presentation/diamond-robots.svg",
-  "masters-thesis-presentation/classical-specific-pattern.svg",
-  "masters-thesis-presentation/deactivation-specific-pattern.svg",
-  "masters-thesis-presentation/unsteered-specific-pattern.svg",
-  "webgl-raytracer/raytracer.frag",
-  "webgl-raytracer/raytracer.js",
-  "webgl-raytracer/raytracer.vert",
+    "articles/rl-force-tube/Chart.js",
+    "articles/rl-force-tube/rl-force-tube.js",
+    "articles/2019-07-21-program-trace-analysis-with-wireshark/packet_dump.pcap",
+    "articles/2019-07-21-program-trace-analysis-with-wireshark/example-protocol-dissector.lua",
+    "articles/2019-07-21-program-trace-analysis-with-wireshark/unmodified-example-program.cc",
+    "articles/2019-07-21-program-trace-analysis-with-wireshark/modified-example-program.cc",
+    "masters-thesis-presentation/reveal.js",
+    "masters-thesis-presentation/reveal.css",
+    "masters-thesis-presentation/white.css",
+    "masters-thesis-presentation/katex/katex.css",
+    "masters-thesis-presentation/katex/katex.js",
+    "masters-thesis-presentation/katex/contrib/auto-render.min.js",
+    "masters-thesis-presentation/phase-space-intro.svg",
+    "masters-thesis-presentation/phase-space-classical-steering.svg",
+    "masters-thesis-presentation/phase-space-deactivation-steering.svg",
+    "masters-thesis-presentation/find-maximal-interval.svg",
+    "masters-thesis-presentation/deactivation-pattern-width5pct.svg",
+    "masters-thesis-presentation/deactivation-pattern-width10pct.svg",
+    "masters-thesis-presentation/deactivation-pattern-width25pct.svg",
+    "masters-thesis-presentation/deactivation-pattern-width41pct.svg",
+    "masters-thesis-presentation/deactivation-pattern-width50pct.svg",
+    "masters-thesis-presentation/deactivation-pattern-width75pct.svg",
+    "masters-thesis-presentation/deactivation-pattern-width100pct.svg",
+    "masters-thesis-presentation/main-beam-comparison.svg",
+    "masters-thesis-presentation/deactivation-main-beam-vs-w.svg",
+    "masters-thesis-presentation/classical-pattern.svg",
+    "masters-thesis-presentation/captured-elements.svg",
+    "masters-thesis-presentation/phase-space-pigeonhole.svg",
+    "masters-thesis-presentation/example-array.svg",
+    "masters-thesis-presentation/experiment-architecture.svg",
+    "masters-thesis-presentation/diamond-robots.svg",
+    "masters-thesis-presentation/classical-specific-pattern.svg",
+    "masters-thesis-presentation/deactivation-specific-pattern.svg",
+    "masters-thesis-presentation/unsteered-specific-pattern.svg",
+    "webgl-raytracer/raytracer.frag",
+    "webgl-raytracer/raytracer.js",
+    "webgl-raytracer/raytracer.vert",
 ]
 
 all_static = all_static_incompressible + all_static_compressible
 
 all_compressibles = all_jinja_template_outputs + all_static_compressible
-all_compressed = ['{}.gz'.format(f) for f in all_compressibles]
+
+all_compressed = ["{}.gz".format(f) for f in all_compressibles]
 
 [genrule(
-    name="compress-{}".format(i),
-    srcs=[i],
-    outs=[o],
-    cmd="gzip <$< >$@",
- ) for i,o in zip(all_compressibles, all_compressed)]
+    name = "compress-{}".format(i),
+    srcs = [i],
+    outs = [o],
+    cmd = "gzip <$< >$@",
+) for i, o in zip(all_compressibles, all_compressed)]
 
 # These files have to have the tilde in them.  The exist to not break
 # Ergun Akleman's TAMU CSCE Image Synthesis class galleries.  Don't
 # bother minifying them, since hardly anyone fetches them.
 all_troublesome = [
-  "old-homedir/classes/csce647/basic_style.css",
-  "old-homedir/classes/csce647/index.html",
-  "old-homedir/classes/csce647/pr01/00.jpg",
-  "old-homedir/classes/csce647/pr01/ballistae-pr01.tar.gz",
-  "old-homedir/classes/csce647/pr01/index.html",
-  "old-homedir/classes/csce647/pr01/picture_0xss.jpeg",
-  "old-homedir/classes/csce647/pr01/picture_1xss.jpeg",
-  "old-homedir/classes/csce647/pr01/picture_2xss.jpeg",
-  "old-homedir/classes/csce647/pr01/picture_3xss.jpeg",
-  "old-homedir/classes/csce647/pr01/thumbnail.jpg",
-  "old-homedir/classes/csce647/pr02/00.jpg",
-  "old-homedir/classes/csce647/pr02/index.html",
-  "old-homedir/classes/csce647/pr02/vp1_fov0.jpeg",
-  "old-homedir/classes/csce647/pr02/vp1_fov1.jpeg",
-  "old-homedir/classes/csce647/pr02/vp1_fov2.jpeg",
-  "old-homedir/classes/csce647/pr02/vp2_fov0.jpeg",
-  "old-homedir/classes/csce647/pr02/vp2_fov1.jpeg",
-  "old-homedir/classes/csce647/pr02/vp2_fov2.jpeg",
-  "old-homedir/classes/csce647/pr03/00.jpg",
-  "old-homedir/classes/csce647/pr03/index.html",
-  "old-homedir/classes/csce647/pr03/simple-gooch-scene.jpeg",
-  "old-homedir/classes/csce647/pr03/simple-gooch-scene.scm",
-  "old-homedir/classes/csce647/pr03/simple-lambert-scene.jpeg",
-  "old-homedir/classes/csce647/pr03/simple-lambert-scene.scm",
-  "old-homedir/classes/csce647/pr03/simple-phong-scene.jpeg",
-  "old-homedir/classes/csce647/pr03/simple-phong-scene.scm",
-  "old-homedir/classes/csce647/pr04/00.jpg",
-  "old-homedir/classes/csce647/pr04/dirlight.jpeg",
-  "old-homedir/classes/csce647/pr04/index.html",
-  "old-homedir/classes/csce647/pr04/two-pointlights.jpeg",
-  "old-homedir/classes/csce647/pr04/two-spotlights.jpeg",
-  "old-homedir/classes/csce647/pr05/00.jpg",
-  "old-homedir/classes/csce647/pr05/index.html",
-  "old-homedir/classes/csce647/pr05/soft-shadow-directional.jpeg",
-  "old-homedir/classes/csce647/pr05/thumbnail.jpg",
-  "old-homedir/classes/csce647/pr05/volumetric-light.jpeg",
-  "old-homedir/classes/csce647/pr06/00.jpg",
-  "old-homedir/classes/csce647/pr06/2d-textures-1.jpeg",
-  "old-homedir/classes/csce647/pr06/index.html",
-  "old-homedir/classes/csce647/pr07/00.jpg",
-  "old-homedir/classes/csce647/pr07/index.html",
-  "old-homedir/classes/csce647/pr07/solid-textures.jpeg",
-  "old-homedir/classes/csce647/pr08/00.jpg",
-  "old-homedir/classes/csce647/pr08/index.html",
-  "old-homedir/classes/csce647/pr08/meshes.jpeg",
-  "old-homedir/classes/csce647/pr09/00.jpg",
-  "old-homedir/classes/csce647/pr09/index.html",
-  "old-homedir/classes/csce647/pr09/reflectance-demo-1.jpeg",
-  "old-homedir/classes/csce647/pr10/00.jpg",
-  "old-homedir/classes/csce647/pr10/bunny-through-glass.jpeg",
-  "old-homedir/classes/csce647/pr10/index.html",
-  "old-homedir/classes/csce647/pr10/scene-through-dodecahedron.jpeg",
-  "old-homedir/classes/csce647/pr10/transparency-demo-1.jpeg",
-  "old-homedir/classes/csce647/pr10/transparency-demo-2.jpeg",
-  "old-homedir/classes/csce647/pr11/00.jpg",
-  "old-homedir/classes/csce647/pr11/01.jpg",
-  "old-homedir/classes/csce647/pr11/index.html",
-  "old-homedir/classes/csce647/pr11/thumbnail.jpg",
-  "old-homedir/classes/csce647/pr12/00.jpg",
-  "old-homedir/classes/csce647/pr12/index.html",
-  "old-homedir/classes/csce647/pr12/ior-animation-frame.jpeg",
-  "old-homedir/classes/csce647/pr12/rolling-marble-frame.jpeg",
-  "old-homedir/classes/csce647/pr13/00.jpg",
-  "old-homedir/classes/csce647/pr13/ambient-occlusion-demo.jpeg",
-  "old-homedir/classes/csce647/pr13/bunny-lit-by-bunny.jpeg",
-  "old-homedir/classes/csce647/pr13/index.html",
-  "old-homedir/classes/csce647/pr13/reflectance-demo-1.jpeg",
-  "old-homedir/classes/csce647/pr13/soft-shadow-directional.jpeg",
-  "old-homedir/classes/csce647/pr14/00.jpg",
-  "old-homedir/classes/csce647/pr14/01.jpg",
-  "old-homedir/classes/csce647/pr14/index.html",
-  "old-homedir/classes/csce647/pr14/thumbnail.jpg",
-  "old-homedir/classes/csce647/pr15/00.jpg",
-  "old-homedir/classes/csce647/pr15/01.jpg",
-  "old-homedir/classes/csce647/pr15/index.html",
-  "old-homedir/classes/csce647/pr15/thumbnail.jpg",
+    "old-homedir/classes/csce647/basic_style.css",
+    "old-homedir/classes/csce647/index.html",
+    "old-homedir/classes/csce647/pr01/00.jpg",
+    "old-homedir/classes/csce647/pr01/ballistae-pr01.tar.gz",
+    "old-homedir/classes/csce647/pr01/index.html",
+    "old-homedir/classes/csce647/pr01/picture_0xss.jpeg",
+    "old-homedir/classes/csce647/pr01/picture_1xss.jpeg",
+    "old-homedir/classes/csce647/pr01/picture_2xss.jpeg",
+    "old-homedir/classes/csce647/pr01/picture_3xss.jpeg",
+    "old-homedir/classes/csce647/pr01/thumbnail.jpg",
+    "old-homedir/classes/csce647/pr02/00.jpg",
+    "old-homedir/classes/csce647/pr02/index.html",
+    "old-homedir/classes/csce647/pr02/vp1_fov0.jpeg",
+    "old-homedir/classes/csce647/pr02/vp1_fov1.jpeg",
+    "old-homedir/classes/csce647/pr02/vp1_fov2.jpeg",
+    "old-homedir/classes/csce647/pr02/vp2_fov0.jpeg",
+    "old-homedir/classes/csce647/pr02/vp2_fov1.jpeg",
+    "old-homedir/classes/csce647/pr02/vp2_fov2.jpeg",
+    "old-homedir/classes/csce647/pr03/00.jpg",
+    "old-homedir/classes/csce647/pr03/index.html",
+    "old-homedir/classes/csce647/pr03/simple-gooch-scene.jpeg",
+    "old-homedir/classes/csce647/pr03/simple-gooch-scene.scm",
+    "old-homedir/classes/csce647/pr03/simple-lambert-scene.jpeg",
+    "old-homedir/classes/csce647/pr03/simple-lambert-scene.scm",
+    "old-homedir/classes/csce647/pr03/simple-phong-scene.jpeg",
+    "old-homedir/classes/csce647/pr03/simple-phong-scene.scm",
+    "old-homedir/classes/csce647/pr04/00.jpg",
+    "old-homedir/classes/csce647/pr04/dirlight.jpeg",
+    "old-homedir/classes/csce647/pr04/index.html",
+    "old-homedir/classes/csce647/pr04/two-pointlights.jpeg",
+    "old-homedir/classes/csce647/pr04/two-spotlights.jpeg",
+    "old-homedir/classes/csce647/pr05/00.jpg",
+    "old-homedir/classes/csce647/pr05/index.html",
+    "old-homedir/classes/csce647/pr05/soft-shadow-directional.jpeg",
+    "old-homedir/classes/csce647/pr05/thumbnail.jpg",
+    "old-homedir/classes/csce647/pr05/volumetric-light.jpeg",
+    "old-homedir/classes/csce647/pr06/00.jpg",
+    "old-homedir/classes/csce647/pr06/2d-textures-1.jpeg",
+    "old-homedir/classes/csce647/pr06/index.html",
+    "old-homedir/classes/csce647/pr07/00.jpg",
+    "old-homedir/classes/csce647/pr07/index.html",
+    "old-homedir/classes/csce647/pr07/solid-textures.jpeg",
+    "old-homedir/classes/csce647/pr08/00.jpg",
+    "old-homedir/classes/csce647/pr08/index.html",
+    "old-homedir/classes/csce647/pr08/meshes.jpeg",
+    "old-homedir/classes/csce647/pr09/00.jpg",
+    "old-homedir/classes/csce647/pr09/index.html",
+    "old-homedir/classes/csce647/pr09/reflectance-demo-1.jpeg",
+    "old-homedir/classes/csce647/pr10/00.jpg",
+    "old-homedir/classes/csce647/pr10/bunny-through-glass.jpeg",
+    "old-homedir/classes/csce647/pr10/index.html",
+    "old-homedir/classes/csce647/pr10/scene-through-dodecahedron.jpeg",
+    "old-homedir/classes/csce647/pr10/transparency-demo-1.jpeg",
+    "old-homedir/classes/csce647/pr10/transparency-demo-2.jpeg",
+    "old-homedir/classes/csce647/pr11/00.jpg",
+    "old-homedir/classes/csce647/pr11/01.jpg",
+    "old-homedir/classes/csce647/pr11/index.html",
+    "old-homedir/classes/csce647/pr11/thumbnail.jpg",
+    "old-homedir/classes/csce647/pr12/00.jpg",
+    "old-homedir/classes/csce647/pr12/index.html",
+    "old-homedir/classes/csce647/pr12/ior-animation-frame.jpeg",
+    "old-homedir/classes/csce647/pr12/rolling-marble-frame.jpeg",
+    "old-homedir/classes/csce647/pr13/00.jpg",
+    "old-homedir/classes/csce647/pr13/ambient-occlusion-demo.jpeg",
+    "old-homedir/classes/csce647/pr13/bunny-lit-by-bunny.jpeg",
+    "old-homedir/classes/csce647/pr13/index.html",
+    "old-homedir/classes/csce647/pr13/reflectance-demo-1.jpeg",
+    "old-homedir/classes/csce647/pr13/soft-shadow-directional.jpeg",
+    "old-homedir/classes/csce647/pr14/00.jpg",
+    "old-homedir/classes/csce647/pr14/01.jpg",
+    "old-homedir/classes/csce647/pr14/index.html",
+    "old-homedir/classes/csce647/pr14/thumbnail.jpg",
+    "old-homedir/classes/csce647/pr15/00.jpg",
+    "old-homedir/classes/csce647/pr15/01.jpg",
+    "old-homedir/classes/csce647/pr15/index.html",
+    "old-homedir/classes/csce647/pr15/thumbnail.jpg",
 ]
 
 all_deploy = all_jinja_template_outputs + all_static + all_compressed
 
 pkg_tar(
-    name="site-tar",
-    strip_prefix="/", # Preserve directory structure
-    package_dir="/var/www",
-    srcs=all_deploy,
+    name = "site-tar",
+    srcs = all_deploy,
+    package_dir = "/var/www",
+    strip_prefix = "/",  # Preserve directory structure
 )
 
 pkg_tar(
-    name="troublesome-tar",
-    strip_prefix="/old-homedir",
-    package_dir="/var/www/~ahmedtd",
-    srcs=all_troublesome,
+    name = "troublesome-tar",
+    srcs = all_troublesome,
+    package_dir = "/var/www/~ahmedtd",
+    strip_prefix = "/old-homedir",
 )
 
 pkg_tar(
-    name="nginx-conf-tar",
-    strip_prefix="/",
-    package_dir="/etc/nginx/conf.d/",
-    srcs=["//:default.conf"],
+    name = "nginx-conf-tar",
+    srcs = ["//:default.conf"],
+    package_dir = "/etc/nginx/conf.d/",
+    strip_prefix = "/",
 )
 
 container_image(
-    name="site-image",
-    base="@nginx_base//image",
-    tars=["//:site-tar", "//:nginx-conf-tar", "//:troublesome-tar"],
-    cmd=["nginx", "-g", "daemon off;"],
+    name = "site-image",
+    base = "@nginx_base//image",
+    cmd = [
+        "nginx",
+        "-g",
+        "daemon off;",
+    ],
+    tars = [
+        "//:site-tar",
+        "//:nginx-conf-tar",
+        "//:troublesome-tar",
+    ],
 )
 
 # This rule generates the push digest as //:push-site-container.digest
 container_push(
-    name="site-push-actual",
-    image=":site-image",
-    format="Docker",
-    registry="gcr.io",
-    repository="bomsync-214520/row-major-website",
-    tag="{BUILD_TIMESTAMP}"
+    name = "site-push-actual",
+    format = "Docker",
+    image = ":site-image",
+    registry = "gcr.io",
+    repository = "bomsync-214520/row-major-website",
+    tag = "{BUILD_TIMESTAMP}",
 )
 
 # genrule(
@@ -323,9 +337,9 @@ container_push(
 
 # Generate
 genrule(
-    name="kustomize-manifests",
-    srcs=glob(["manifests/**/*.yaml"]),
-    tools=["@kustomize//file"],
-    outs=["kustomized-manifest.yaml"],
-    cmd="kustomize build manifests/ >$@",
+    name = "kustomize-manifests",
+    srcs = glob(["manifests/**/*.yaml"]),
+    outs = ["kustomized-manifest.yaml"],
+    cmd = "kustomize build manifests/ >$@",
+    tools = ["@kustomize//file"],
 )
