Add some unused http->https redirect stuff

--- a/manifests/row-major-web.yaml
+++ b/manifests/row-major-web.yaml
@@ -80,6 +80,12 @@ metadata:
   annotations:
     networking.gke.io/managed-certificates: www-row-major-net,row-major-net
     kubernetes.io/ingress.global-static-ip-name: "row-major-web"
+    # This doesn't work yet.  Watch
+    # https://github.com/kubernetes/ingress-gce/issues/51 and
+    # https://issuetracker.google.com/issues/35904733
+    #
+    #kubernetes.io/ingress.allow-http: "false"
+    #ingress.kubernetes.io/force-ssl-redirect: "true"
 spec:
   backend:
     serviceName: row-major-web-content-service
