Add a driver program for the life solver
It has a nice autorefreshing HTML progress report.

--- a/life-solver/BUILD.bazel
+++ b/life-solver/BUILD.bazel
@@ -12,3 +12,9 @@ go_test(
     embed = [":life"],
     importpath = "row-major/life-solver/life",
 )
+
+go_binary(
+    name = "life-reverser",
+    srcs = ["main.go"],
+    deps = [":life"],
+)
