--- a/webalator/BUILD.bazel
+++ b/webalator/BUILD.bazel
@@ -1,4 +1,23 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_docker//go:image.bzl", "go_image")
+load(
+    "@io_bazel_rules_docker//container:container.bzl",
+    "container_push",
+)
+
+go_image(
+    name = "webalator_image",
+    binary = ":webalator",
+)
+
+container_push(
+    name = "webalator_push",
+    format = "Docker",
+    image = ":webalator_image",
+    registry = "gcr.io",
+    repository = "bomsync-214520/webalator",
+    tag = "{BUILD_TIMESTAMP}",
+)
 
 go_binary(
     name = "webalator",
