--- a/webalator/site/BUILD.bazel
+++ b/webalator/site/BUILD.bazel
@@ -5,4 +5,9 @@ go_library(
     srcs = ["site.go"],
     importpath = "row-major/webalator/site",
     visibility = ["//visibility:public"],
+    deps = [
+        "//vendor/go.opencensus.io/stats:go_default_library",
+        "//vendor/go.opencensus.io/stats/view:go_default_library",
+        "//vendor/go.opencensus.io/tag:go_default_library",
+    ],
 )
