--- a/webalator/BUILD.bazel
+++ b/webalator/BUILD.bazel
@@ -40,6 +40,8 @@ go_library(
         "//vendor/contrib.go.opencensus.io/exporter/stackdriver:go_default_library",
         "//vendor/contrib.go.opencensus.io/exporter/stackdriver/monitoredresource:go_default_library",
         "//vendor/go.opencensus.io/trace:go_default_library",
+        "//webalator/healthz:go_default_library",
+        "//webalator/httpmetrics:go_default_library",
         "//webalator/site:go_default_library",
     ],
 )
