Iterating on CI setup

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,4 +3,4 @@ job-test:
     name: gcr.io/google.com/cloudsdktool/cloud-sdk
   script:
     - gcloud auth activate-service-account --key-file=${GCP_SA_KEY_FILE}
-    - gcloud builds submit --config=cloudbuild.yaml ./
+    - gcloud --project=bomsync-214520 builds submit --config=cloudbuild.yaml ./
