--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,9 +2,12 @@ steps:
 - name: 'gcr.io/cloud-marketplace-containers/google/bazel'
   entrypoint: 'bazel'
   args: ['test', '--', '//...', '-//vendor/...']
+
+# Load our built webalator image into the local Docker cache.
 - name: 'gcr.io/cloud-marketplace-containers/google/bazel'
   entrypoint: 'bazel'
-  args: ['run', '//webalator:webalator_image']
+  args: ['run', '//webalator:webalator_image', '--', '--norun']
+
 - name: 'gcr.io/cloud-builders/docker'
   args: ['tag', 'bazel/webalator:webalator_image', 'gcr.io/$PROJECT_ID/webalator']
 images:
