--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,8 @@ job-check-access:
   stage: deploy
   image: gcr.io/google.com/cloudsdktool/cloud-sdk
   script:
-    - curl -H 'Metadata-Flavor: Google' http://169.254.169.254/computeMetadata/v1/instance/service-accounts/default/email
-    - curl -H 'Metadata-Flavor: Google' http://169.254.169.254/computeMetadata/v1/instance/
+    - "curl -H 'Metadata-Flavor: Google' http://169.254.169.254/computeMetadata/v1/instance/service-accounts/default/email"
+    - "curl -H 'Metadata-Flavor: Google' http://169.254.169.254/computeMetadata/v1/instance/"
 
 job-deploy:
   stage: deploy
