--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 job-upload-images:
   stage: upload-images
   rules:
-    - if: "${CI_COMMIT_MESSAGE} =~ /^NO_UPLOAD_IMAGES=/"
+    - if: "$CI_COMMIT_MESSAGE =~ /^NO_UPLOAD_IMAGES=/"
   image: gcr.io/google.com/cloudsdktool/cloud-sdk
   script:
     - "gcloud auth activate-service-account --key-file=${GCP_SA_KEY_FILE}"
@@ -14,7 +14,7 @@ job-upload-images:
 job-update-image-in-manifest:
   stage: update-image-in-manifest
   rules:
-    - if: "${CI_COMMIT_MESSAGE} =~ /^NO_UPDATE_IMAGES_IN_MANIFEST=/"
+    - if: "$CI_COMMIT_MESSAGE =~ /^NO_UPDATE_IMAGES_IN_MANIFEST=/"
   image: gcr.io/google.com/cloudsdktool/cloud-sdk
   script:
     - |
@@ -52,8 +52,3 @@ job-update-image-in-manifest:
         --form "actions[][file_path]=manifests/production/production-images.patch.yaml"
         --form "actions[][content]=<patch.yaml"
         "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/repository/commits"
-      
-      
-
-    
-    
