--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,7 @@ job-update-image-in-manifest:
     - |
       curl \
         --request POST \
-        --header "PRIVATE-TOKEN=${GITLAB_API_TOKEN}" \
+        --header "PRIVATE-TOKEN:${GITLAB_API_TOKEN}" \
         --form "branch=master" \
         --form "start_branch=master" \
         --form "commit_message=<commit-message.txt" \
