--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ job-update-image-in-manifest:
   image: gcr.io/google.com/cloudsdktool/cloud-sdk
   script:
     - |
-      echo >patch.yaml <<EOF
+      cat <<EOF >patch.yaml
       # This file is overwritten by CI
       apiVersion: apps/v1
       kind: Deployment
@@ -34,7 +34,7 @@ job-update-image-in-manifest:
       EOF
 
     - |
-      echo >commit-message.txt <<EOF
+      cat <<EOF >commit-message.txt
       Manifest update for ${CI_COMMIT_SHA}
 
       NO_UPLOAD_IMAGES=
@@ -46,7 +46,6 @@ job-update-image-in-manifest:
         --request POST \
         --header "PRIVATE-TOKEN:${GITLAB_API_TOKEN}" \
         --form "branch=master" \
-        --form "start_branch=master" \
         --form "commit_message=<commit-message.txt" \
         --form "actions[][action]=update" \
         --form "actions[][file_path]=manifests/production/production-images.patch.yaml" \
