--- a/manifests/production/production-images.patch.yaml
+++ b/manifests/production/production-images.patch.yaml
@@ -1,1 +1,12 @@
-
+# This file is overwritten by CI
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: row-major-web-content-deployment
+  namespace: row-major-web
+spec:
+  template:
+    spec:
+      containers:
+        - name: row-major-web-content
+          image: gcr.io/bomsync-214520/webalator:fb78ac2ad899757a16b9e58c4cbecf381c29d373
