--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,9 @@
 stages:
   - upload-images
-  - update-image-in-manifest
+  - update-manifest
+  - apply-manifest
 
-job-upload-images:
+Upload Images:
   stage: upload-images
   rules:
     - if: "$CI_COMMIT_MESSAGE !~ /^NO_UPLOAD_IMAGES=/m"
@@ -11,14 +12,14 @@ job-upload-images:
     - "gcloud auth activate-service-account --key-file=${GCP_SA_KEY_FILE}"
     - "gcloud --project=bomsync-214520 builds submit ./ --config=cloudbuild.yaml --timeout=10m --substitutions=COMMIT_SHA=${CI_COMMIT_SHA}"
 
-job-update-image-in-manifest:
-  stage: update-image-in-manifest
+Update Manifest:
+  stage: update-manifest
   rules:
     - if: "$CI_COMMIT_MESSAGE !~ /^NO_UPDATE_IMAGES_IN_MANIFEST=/m"
   image: gcr.io/google.com/cloudsdktool/cloud-sdk
   script:
     - |
-      cat <<EOF >patch.yaml
+      cat <<EOF >manifests/production/production-images.patch.yaml
       # This file is overwritten by CI
       apiVersion: apps/v1
       kind: Deployment
@@ -32,7 +33,6 @@ job-update-image-in-manifest:
               - name: row-major-web-content
                 image: gcr.io/bomsync-214520/webalator:${CI_COMMIT_SHA}
       EOF
-
     - |
       cat <<EOF >commit-message.txt
       Manifest update for ${CI_COMMIT_SHA}
@@ -40,7 +40,7 @@ job-update-image-in-manifest:
       NO_UPLOAD_IMAGES=
       NO_UPDATE_IMAGES_IN_MANIFEST=
       EOF
-
+    - kubectl kustomize manifests/production > manifests/production/rendered.yaml
     - |
       curl \
         --request POST \
@@ -49,5 +49,16 @@ job-update-image-in-manifest:
         --form "commit_message=<commit-message.txt" \
         --form "actions[][action]=update" \
         --form "actions[][file_path]=manifests/production/production-images.patch.yaml" \
-        --form "actions[][content]=<patch.yaml" \
+        --form "actions[][content]=<manifests/production/production-images.patch.yaml" \
+        --form "actions[][action]=update" \
+        --form "actions[][file_path]=manifests/production/rendered.yaml" \
+        --form "actions[][content]=<manifests/production/rendered.yaml" \
         "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/repository/commits"
+
+Apply Manifest:
+  stage: apply-manifest
+  image: gcr.io/google.com/cloudsdktool/cloud-sdk
+  script:
+    - "gcloud auth activate-service-account --key-file=${GCP_SA_KEY_FILE}"
+    - "gcloud --project=bomsync-214520 builds submit ./ --config=cloudbuild-deploy.yaml --timeout=10m --substitutions=COMMIT_SHA=${CI_COMMIT_SHA}"
+
